add check for embedded signature exists
